# RepoPilot

./: .env.example  .gitignore  LICENSE  README.md  codex.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/: AGENTS.md  CODEX.md
docs/tutorials/: indexing.md  orchestrator.md  retrieval.md  service.md  storage.md
repopilot/: __init__.py  compat.py  config.py  response_builder.py  schemas.py
repopilot/agent/: __init__.py  runner.py
repopilot/config/: __init__.py  integrations.py  models.py  runtime.py  storage.py
repopilot/integrations/: __init__.py  github_mcp.py
repopilot/memory/: __init__.py  store.py
repopilot/rag/: __init__.py  base.py  chunking.py  documents.py  easyrag.py  indexer.py  ingest.py  operate.py  orchestrator.py  preprocess.py  providers.py  retrieve.py  retriever.py  tool.py  types.py  utils.py
repopilot/rag/indexing/: __init__.py  chunking.py  chunking_core.py  loaders.py  maintenance.py  pipeline.py  prepare.py
repopilot/rag/kg/: __init__.py
repopilot/rag/knowledge/: __init__.py  curation.py  extraction.py  sync.py
repopilot/rag/retrieval/: __init__.py  fusion.py  hydration.py  (+3 more)
repopilot/service/: __init__.py  response_builder.py  schemas.py
repopilot/support/: __init__.py  optional_deps.py
scripts/: build_index.py  start_github_mcp.sh  test_github_mcp.py
tests/: test_architecture_boundaries.py  test_config.py  test_github_mcp_config.py  test_memory_store.py  test_rag_api.py  test_rag_backends.py  test_rag_graph_ops.py  test_rag_providers.py  test_rag_retriever.py  test_rag_runner.py  test_response_builder.py
(+30 files in other folders)
